-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9, 11, 17, 18, 19
-
Component/s: hotspot
-
b18
-
aarch64
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8298929 | 17.0.7-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8294737 | 17.0.6 | Paul Hohensee | P3 | Resolved | Fixed | b01 |
instruct replicate2L_zero(vecX dst, immI0 zero)
%{
predicate(UseSVE == 0 && n->as_Vector()->length() == 2);
match(Set dst (ReplicateI zero));
ins_cost(INSN_COST);
format %{ "movi $dst, $zero\t# vector (4I)" %}
ins_encode %{
__ eor(as_FloatRegister($dst$$reg), __ T16B,
as_FloatRegister($dst$$reg),
as_FloatRegister($dst$$reg));
%}
ins_pipe(vmovi_reg_imm128);
%}
This rule outputs vecX, however, it matches ReplicateI node. Should it be ReplicateL?
%{
predicate(UseSVE == 0 && n->as_Vector()->length() == 2);
match(Set dst (ReplicateI zero));
ins_cost(INSN_COST);
format %{ "movi $dst, $zero\t# vector (4I)" %}
ins_encode %{
__ eor(as_FloatRegister($dst$$reg), __ T16B,
as_FloatRegister($dst$$reg),
as_FloatRegister($dst$$reg));
%}
ins_pipe(vmovi_reg_imm128);
%}
This rule outputs vecX, however, it matches ReplicateI node. Should it be ReplicateL?
- backported by
-
JDK-8294737 AArch64: Incorrect replicate2L_zero rule
-
- Resolved
-
-
JDK-8298929 AArch64: Incorrect replicate2L_zero rule
-
- Resolved
-
- relates to
-
JDK-8079565 Add vectorization support for aarch64
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/9483069f
-
Commit
openjdk/jdk/c3559028
-
Review
openjdk/jdk17u-dev/642
-
Review
openjdk/jdk/7939
(2 links to)